Ajout de style + crédit icône

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <span class="box__score box__score--hidden">Tu as trouvé en 25 tentatives !</span>
                 <button class="box__button box__button--replay" id="replay">Rejouer</button>
             </div>
+            <a class="box__credit" href="https://www.flaticon.com/free-icons/dice" title="dice icons">Dice icon created by bearicons - Flaticon</a>
         </div>
     </body>
 </html>
