Correction d'un bug sur Firefox

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="box__content">
                 <label class="box__label" for="number">Entre un nombre entre 1 et 1000 :</label>
                 <div class="box__container">
-                    <input class="box__input" type="number" id="number" name="number" placeholder="Ex: 420">
+                    <input class="box__input" type="number" id="number" name="number" placeholder="Ex: 420" inputmode="numeric">
                     <button class="box__button box__button--check" id="check">Vérifier</button>
                 </div>
                 <span class="box__text">Devine à quel nombre je pense &#x1F609;</span>
