--- a/index.html
+++ b/index.html
@@ -9,27 +9,42 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
+        
         <script src="assets/scripts/config.js" defer></script>
-        <script src="assets/scripts/script.js" defer></script>
+        <script src="assets/scripts/utils.js" defer></script>
+        <script src="assets/scripts/game.js" defer></script>
+        <script src="assets/scripts/history.js" defer></script>
+        <script src="assets/scripts/events.js" defer></script>
         <script src="assets/scripts/main.js" defer></script>
     </head>
 
     <body>
-        <div class="box">
-            <div class="box__heading">
+        <main class="box">
+            <header class="box__header">
                 <img class="box__image" src="assets/images/dice.png" alt="Image d'un dé à jouer">
                 <h1 class="box__title">Devine le Nombre !</h1>
-            </div>
-            <div class="box__content">
-                <label class="box__label" for="number">Entre un nombre entre 1 et 1000 :</label>
-                <div class="box__container">
-                    <input class="box__input" type="number" id="number" name="number" placeholder="Ex: 420" inputmode="numeric">
-                    <button class="box__button box__button--check" id="check">Vérifier</button>
-                </div>
+            </header>
+
+            <section class="box__content">
+                <form class="box__form" method="get">
+                    <label class="box__label" for="number">Entre un nombre entre 1 et 1000 :</label>
+                    <div class="box__container">
+                        <input class="box__input" type="number" id="number" name="number" placeholder="Ex: 420" inputmode="numeric">
+                        <button class="box__button box__button--check" id="check">Vérifier</button>
+                    </div>
+                </form>
                 <span class="box__text">Devine à quel nombre je pense &#x1F609;</span>
                 <button class="box__button box__button--replay" id="replay">Rejouer</button>
-            </div>
-            <a class="box__credit" href="https://www.flaticon.com/free-icons/dice" title="dice icons">Dice icon created by bearicons - Flaticon</a>
-        </div>
+            </section>
+
+            <footer>
+                <a class="box__credit" href="https://www.flaticon.com/free-icons/dice" title="dice icons">Dice icon created by bearicons - Flaticon</a>
+            </footer>
+        </main>
+
+        <aside class="history history--hidden">
+            <h2 class="history__title">Historique</h2>
+            <ul class="history__list"></ul>
+        </aside>
     </body>
 </html>
